Add newly required `--add-exports` arguments to test tasks
Following the release notes: https://github.com/google/compile-testing/releases/tag/v0.22.0